--- a/style.css
+++ b/style.css
@@ -447,6 +447,28 @@ p {
     width: 100%;
 }
 
+#loader {
+  border: 16px solid grey;
+  border-radius: 50%;
+  align-self: center;
+  border-top: 16px solid orange;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 @media (max-width: 500px) {
     body {
 	height: 100%;
